--- a/team_members.html
+++ b/team_members.html
@@ -24,8 +24,8 @@
     <script>
         window.onload = function (){
             $("nav").hide();;
-
             $(".team-container").hide();
+            init();
             scrollM(0,0);
         }
 
