针对wiki的兼容性修正

--- a/team_members.html
+++ b/team_members.html
@@ -68,55 +68,55 @@
 <nav>
     <div class="nav-wrapper">
         <ul id="topbar">
-            <li class="main-menu"><a  href="index.html"> <img  src="static/img/logo1.png" alt="logo"  />  </a> </li>
+            <li class="main-menu"><a  href="https://2020.igem.org/Team:BUCT"> <img class="bar-logo" src="https://2020.igem.org/wiki/images/2/24/T--BUCT--logo1.png" alt="logo"  />  </a> </li>
             <li class="main-menu">
-                <a class="main-menu-btn" href="#" style="margin-left: -30px">PROJECT <i class="fa fa-caret-down" style="font-size:24px"></i></a>
-                <ol class="submenu" style="margin-left: -30px">
-                    <li><a href="#">Description</a></li>
-                    <li><a href="#">Design</a></li>
-                    <li><a href="#">Parts</a></li>
-                    <li><a href="#">Improvement</a></li>
+                <a class="main-menu-btn" href="#" style="margin-left: -30px">PROJECT <img src="static/img/arrow-down.png" style="margin-left: 6px" width="20px" height="22px"/></a>
+                <ol class="buct-submenu" style="margin-left: -30px">
+                    <li><a href="https://2020.igem.org/Team:BUCT/Description">Description</a></li>
+                    <li><a href="https://2020.igem.org/Team:BUCT/Design">Design</a></li>
+                    <li><a href="https://2020.igem.org/Team:BUCT/Parts">Parts</a></li>
+                    <li><a href="https://2020.igem.org/Team:BUCT/Improvement">Improvement</a></li>
                 </ol>
             </li>
-            <li class="main-menu"><a class="main-menu-btn" href="#">RESULTS<i class="fa fa-caret-down" style="font-size:24px"></i></a>
-                <ol class="submenu">
-                    <li><a href="#">Demonstrate</a></li>
-                    <li><a href="#">Contribution</a></li>
-                    <li><a href="#">Engineering<br/>Success</a></li>
-                    <li><a href="#">Proposed<br/>Implementaion</a></li>
+            <li class="main-menu"><a class="main-menu-btn" href="#">RESULTS <img src="static/img/arrow-down.png" style="margin-left: 6px" width="20px" height="22px"/></i></a>
+                <ol class="buct-submenu">
+                    <li><a href="https://2020.igem.org/Team:BUCT/Demonstrate">Demonstrate</a></li>
+                    <li><a href="https://2020.igem.org/Team:BUCT/Contribution">Contribution</a></li>
+                    <li><a href="https://2020.igem.org/Team:BUCT/Engineering">Engineering<br/>Success</a></li>
+                    <li><a href="https://2020.igem.org/Team:BUCT/Implementation">Proposed<br/>Implementaion</a></li>
 
                 </ol>
             </li>
-            <li class="main-menu"><a class="main-menu-btn" href="#">WET LAB<i class="fa fa-caret-down" style="font-size:24px"></i></a>
-                <ol class="submenu">
-                    <li><a href="#">Measurement</a></li>
-                    <li><a href="#">Notebook</a></li>
-                    <li><a href="#">Safety</a></li>
-                    <li><a href="#">Methods</a></li>
+            <li class="main-menu"><a class="main-menu-btn" href="#">WET LAB <img src="static/img/arrow-down.png" style="margin-left: 6px" width="20px" height="22px"/></i></a>
+                <ol class="buct-submenu">
+                    <li><a href="https://2020.igem.org/Team:BUCT/Measurement">Measurement</a></li>
+                    <li><a href="https://2020.igem.org/Team:BUCT/Notebook">Notebook</a></li>
+                    <li><a href="https://2020.igem.org/Team:BUCT/Safety">Safety</a></li>
+                    <li><a href="https://2020.igem.org/Team:BUCT/Methods">Methods</a></li>
 
                 </ol>
             </li>
-            <li class="main-menu"><a class="main-menu-btn" href="#">DRY LAB<i class="fa fa-caret-down" style="font-size:24px"></i></a>
-                <ol class="submenu">
-                    <li><a href="#">Modeling</a></li>
+            <li class="main-menu"><a class="main-menu-btn" href="#">DRY LAB <img src="static/img/arrow-down.png" style="margin-left: 6px" width="20px" height="22px"/></i></a>
+                <ol class="buct-submenu">
+                    <li><a href="https://2020.igem.org/Team:BUCT/Modeling">Modeling</a></li>
 
                 </ol>
             </li>
-            <li class="main-menu"><a class="main-menu-btn" href="#">Team<i class="fa fa-caret-down" style="font-size:24px"></i></a>
-                <ol class="submenu">
-                    <li><a href="team_members.html">Members</a></li>
-                    <li><a href="#">Attributions</a></li>
-                    <li><a href="#">Collabrations</a></li>
-                    <li><a href="#">Sponsors</a></li>
+            <li class="main-menu"><a class="main-menu-btn" href="#">Team <img src="static/img/arrow-down.png" style="margin-left: 6px" width="20px" height="22px"/></a>
+                <ol class="buct-submenu">
+                    <li><a href="https://2020.igem.org/Team:BUCT/Members">Members</a></li>
+                    <li><a href="https://2020.igem.org/Team:BUCT/Attributions">Attributions</a></li>
+                    <li><a href="https://2020.igem.org/Team:BUCT/TCollabrations">Collabrations</a></li>
+                    <li><a href="https://2020.igem.org/Team:BUCT/Sponsors">Sponsors</a></li>
 
                 </ol>
             </li>
-            <li class="main-menu"><a class="main-menu-btn" style="font-size: 13px;vertical-align: middle" href="#">HUMAN<br/>PRACTICES<i class="fa fa-caret-down" style="font-size:20px"></i></a>
-                <ol class="submenu">
-                    <li><a href="#">Integrated HP</a></li>
-                    <li><a href="#">Collaboration</a></li>
-                    <li><a href="#">Partnership</a></li>
-                    <li><a href="#">Education&<br/>Engagement</a></li>
+            <li class="main-menu"><a class="main-menu-btn" style="font-size: 13px;vertical-align: middle" href="#">HUMAN<br/>PRACTICES <img src="static/img/arrow-down.png" style="margin-left: 6px" width="20px" height="22px"/></a>
+                <ol class="buct-submenu">
+                    <li><a href="https://2020.igem.org/Team:BUCT/Human_Practices">Integrated HP</a></li>
+                    <li><a href="https://2020.igem.org/Team:BUCT/Collaboration">Collaboration</a></li>
+                    <li><a href="https://2020.igem.org/Team:BUCT/Partnership">Partnership</a></li>
+                    <li><a href="https://2020.igem.org/Team:BUCT/Education">Education&<br/>Engagement</a></li>
 
                 </ol>
             </li>
@@ -393,7 +393,7 @@ background: linear-gradient(to right, #2ebf91, #8360c3); /* W3C, IE 10+/ Edge, F
 
 
 </div>
-<button id="topButton" class="button button-glow button-circle button-action button-jumbo" onclick="scrollControl(0)"><i class="fa fa-angle-up"></i></button>
+<button id="topButton" class="buct-button button-glow button-circle button-action button-jumbo" onclick="scrollControl(0)"><i class="fa fa-angle-up"></i></button>
 
 <!--脚注-->
 <footer>
