--- a/index.html
+++ b/index.html
@@ -1,32 +1,43 @@
 <!DOCTYPE html>
-<html lang="zh">
-<head>
-    <meta charset="UTF-8">
-    <title>BUCT_IGEM</title>
-    <!-- 最新版本的 Bootstrap 核心 文件 -->
-<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
-<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
+<html lang="en">
+
 
     <!--引入css文件-->
-    <link href="https://www.bootcss.com/p/buttons/css/buttons.css" type="text/css" rel="stylesheet"/>
-    <link href="static/css/bar.css" type="text/css" rel="stylesheet" />
-    <link href="static/font-awesome/css/font-awesome.css" type="text/css" rel="stylesheet">
-    <link href="static/css/loading.css" type="text/css" rel="stylesheet" />
-    <link href="static/css/team_name.css" type="text/css" rel="stylesheet" />
-    <link href="static/css/cell.css" type="text/css" rel="stylesheet" />
-    <link href="static/css/home-style.css" type="text/css" rel="stylesheet" />
-    <link rel="stylesheet" href="static/css/stars.css"/>
-    <link rel="stylesheet" href="static/css/wave.css"/>
-    <link rel="stylesheet" href="static/css/footer.css"/>
-    <!-- JS 文件-->
-    <script src="static/js/scroll.js"></script>
-    <script src="static/js/jquery.js"></script>
-    <script src='static/js/gsap.min.js'></script>
+<!--    <link href="https://2017.igem.org/wiki/index.php?title=Template:SCU_China/default_CSS&action=raw&ctype=text/css" type="text/css" rel="stylesheet" />-->
+    <link href="static/css/bar.css" rel="stylesheet" type="text/css">
+    <link href="static/css/home-style.css" rel="stylesheet" type="text/css">
+    <link href="static/css/loading.css" rel="stylesheet" type="text/css">
+    <link href="static/css/team_name.css" rel="stylesheet" type="text/css">
+    <link href="static/css/cell.css" rel="stylesheet" type="text/css">
+    <link href="static/css/stars.css" rel="stylesheet" type="text/css">
+    <link href="static/css/wave.css" rel="stylesheet" type="text/css">
+    <link href="static/css/footer.css" rel="stylesheet" type="text/css">
+
+    <script src="static/js/gsap.min.js"></script>
     <script src="static/js/bg_stars.js"></script>
+    <script src="static/js/scroll.js"></script>
+        <link href="https://2020.igem.org/wiki/index.php?title=Template:BUCT/CSS/home-style&action=raw&ctype=text/css" type="text/css" rel="stylesheet" />
+    <link href="https://2020.igem.org/wiki/index.php?title=Template:BUCT/CSS/button&action=raw&ctype=text/css" type="text/css" rel="stylesheet"/>
+<!--&lt;!&ndash;    <link href="https://2020.igem.org/wiki/index.php?title=Template:BUCT/CSS/bar&action=raw&ctype=text/css" type="text/css" rel="stylesheet" />&ndash;&gt;-->
+<!--    <link href="https://2020.igem.org/wiki/index.php?title=Template:BUCT/CSS/font-awesome&action=raw&ctype=text/css" type="text/css" rel="stylesheet">-->
+
+    <link href="https://2020.igem.org/wiki/index.php?title=Template:BUCT/CSS/team_name&action=raw&ctype=text/css" type="text/css" rel="stylesheet" />
+    <link href="https://2020.igem.org/wiki/index.php?title=Template:BUCT/CSS/cell&action=raw&ctype=text/css" type="text/css" rel="stylesheet" />
+    <link href="https://2020.igem.org/wiki/index.php?title=Template:BUCT/CSS/stars&action=raw&ctype=text/css" type="text/css" rel="stylesheet" />
+    <link href="https://2020.igem.org/wiki/index.php?title=Template:BUCT/CSS/wave&action=raw&ctype=text/css" type="text/css" rel="stylesheet" />
+<!--    <link href="https://2020.igem.org/wiki/index.php?title=Template:BUCT/CSS/footer&action=raw&ctype=text/css" type="text/css" rel="stylesheet" />-->
+
+<!--    &lt;!&ndash; JS 文件&ndash;&gt;-->
+    <script src="https://2020.igem.org/wiki/index.php?title=Template:BUCT/JS/scroll&action=raw&ctype=text/javascript"></script>
+<!--    <script src="https://2020.igem.org/wiki/index.php?title=Template:BUCT/JS/gsap&action=raw&ctype=text/javascript"></script>-->
+<!--    <script src="https://2020.igem.org/wiki/index.php?title=Template:BUCT/JS/bg_stars&action=raw&ctype=text/javascript"></script>-->
+
+    <script src="static/js/jquery.js"></script>
+
 
     <script>
         window.onload = function (){
-            $("nav").hide();;
+            $(".buct-bar").hide();
 
             $(".team-container").hide();
             scrollM(0,0);
@@ -39,16 +50,17 @@
                     $("#loading-cover").slideUp(700);
 
                      document.getElementById("body-content").style.visibility = "visible";
-                     $(".all-body").css({"overflow": "scroll"});
-                     $("nav").show();
+                     $("body").css({"overflow": "scroll"});
+                     $(".buct-bar").show();
                      $(".team-container").show();
+
 
                  },2400)
             }
         }
     </script>
-</head>
-<body class="all-body" style="overflow: hidden">
+
+<body class="page-Team_BUCT" style="overflow: hidden">
 <!-- loading begin-->
 
 <div id="loading-cover">
@@ -67,73 +79,76 @@
 </div>
 <!-- loading end -->
 <!--navigator begin-->
-<nav>
-    <div class="nav-wrapper">
+<nav id="buct-bar">
     <ul id="topbar">
-        <li class="main-menu"><a  href="index.html"> <img  src="static/img/logo1.png" alt="logo"  />  </a> </li>
+        <li class="main-menu"><a  href="https://2020.igem.org/Team:BUCT"> <img class="bar-logo" src="https://2020.igem.org/wiki/images/2/24/T--BUCT--logo1.png" alt="logo"  />  </a> </li>
         <li class="main-menu">
-            <a class="main-menu-btn" href="#" style="margin-left: -30px">PROJECT <i class="fa fa-caret-down" style="font-size:24px"></i></a>
-            <ol class="submenu" style="margin-left: -30px">
-                <li><a href="#">Description</a></li>
-                <li><a href="#">Design</a></li>
-                <li><a href="#">Parts</a></li>
-                <li><a href="#">Improvement</a></li>
+            <a class="main-menu-btn" href="#" style="margin-left: -30px">PROJECT <img src="https://2020.igem.org/wiki/images/f/fa/T--BUCT--arrow-down.png" style="margin-left: 6px" width="20px" height="22px"/></a>
+            <ol class="buct-submenu" style="margin-left: -30px">
+                <li><a href="https://2020.igem.org/Team:BUCT/Description">Description</a></li>
+                <li><a href="https://2020.igem.org/Team:BUCT/Design">Design</a></li>
+                <li><a href="https://2020.igem.org/Team:BUCT/Parts">Parts</a></li>
+                <li><a href="https://2020.igem.org/Team:BUCT/Improvement">Improvement</a></li>
             </ol>
         </li>
-        <li class="main-menu"><a class="main-menu-btn" href="#">RESULTS<i class="fa fa-caret-down" style="font-size:24px"></i></a>
-            <ol class="submenu">
-                <li><a href="#">Demonstrate</a></li>
-                <li><a href="#">Contribution</a></li>
-                <li><a href="#">Engineering<br/>Success</a></li>
-                <li><a href="#">Proposed<br/>Implementaion</a></li>
+        <li class="main-menu"><a class="main-menu-btn" href="#">RESULTS <img src="https://2020.igem.org/wiki/images/f/fa/T--BUCT--arrow-down.png" style="margin-left: 6px" width="20px" height="22px"/></i></a>
+            <ol class="buct-submenu">
+                <li><a href="https://2020.igem.org/Team:BUCT/Demonstrate">Demonstrate</a></li>
+                <li><a href="https://2020.igem.org/Team:BUCT/Contribution">Contribution</a></li>
+                <li><a href="https://2020.igem.org/Team:BUCT/Engineering">Engineering<br/>Success</a></li>
+                <li><a href="https://2020.igem.org/Team:BUCT/Implementation">Proposed<br/>Implementaion</a></li>
 
             </ol>
         </li>
-        <li class="main-menu"><a class="main-menu-btn" href="#">WET LAB<i class="fa fa-caret-down" style="font-size:24px"></i></a>
-            <ol class="submenu">
-                <li><a href="#">Measurement</a></li>
-                <li><a href="#">Notebook</a></li>
-                <li><a href="#">Safety</a></li>
-                <li><a href="#">Methods</a></li>
+        <li class="main-menu"><a class="main-menu-btn" href="#">WET LAB <img src="https://2020.igem.org/wiki/images/f/fa/T--BUCT--arrow-down.png" style="margin-left: 6px" width="20px" height="22px"/></i></a>
+            <ol class="buct-submenu">
+                <li><a href="https://2020.igem.org/Team:BUCT/Measurement">Measurement</a></li>
+                <li><a href="https://2020.igem.org/Team:BUCT/Notebook">Notebook</a></li>
+                <li><a href="https://2020.igem.org/Team:BUCT/Safety">Safety</a></li>
+                <li><a href="https://2020.igem.org/Team:BUCT/Methods">Methods</a></li>
 
             </ol>
         </li>
-        <li class="main-menu"><a class="main-menu-btn" href="#">DRY LAB<i class="fa fa-caret-down" style="font-size:24px"></i></a>
-            <ol class="submenu">
-                <li><a href="#">Modeling</a></li>
+        <li class="main-menu"><a class="main-menu-btn" href="#">DRY LAB <img src="https://2020.igem.org/wiki/images/f/fa/T--BUCT--arrow-down.png" style="margin-left: 6px" width="20px" height="22px"/></i></a>
+            <ol class="buct-submenu">
+                <li><a href="https://2020.igem.org/Team:BUCT/Modeling">Modeling</a></li>
 
             </ol>
         </li>
-        <li class="main-menu"><a class="main-menu-btn" href="#">Team<i class="fa fa-caret-down" style="font-size:24px"></i></a>
-            <ol class="submenu">
-                <li><a href="team_members.html">Members</a></li>
-                <li><a href="#">Attributions</a></li>
-                <li><a href="#">Collabrations</a></li>
-                <li><a href="#">Sponsors</a></li>
+        <li class="main-menu"><a class="main-menu-btn" href="#">Team <img src="https://2020.igem.org/wiki/images/f/fa/T--BUCT--arrow-down.png" style="margin-left: 6px" width="20px" height="22px"/></a>
+            <ol class="buct-submenu">
+                <li><a href="https://2020.igem.org/Team:BUCT/Members">Members</a></li>
+                <li><a href="https://2020.igem.org/Team:BUCT/Attributions">Attributions</a></li>
+                <li><a href="https://2020.igem.org/Team:BUCT/TCollabrations">Collabrations</a></li>
+                <li><a href="https://2020.igem.org/Team:BUCT/Sponsors">Sponsors</a></li>
 
             </ol>
         </li>
-        <li class="main-menu"><a class="main-menu-btn" style="font-size: 13px;vertical-align: middle" href="#">HUMAN<br/>PRACTICES<i class="fa fa-caret-down" style="font-size:20px"></i></a>
-            <ol class="submenu">
-                <li><a href="#">Integrated HP</a></li>
-                <li><a href="#">Collaboration</a></li>
-                <li><a href="#">Partnership</a></li>
-                <li><a href="#">Education&<br/>Engagement</a></li>
+        <li class="main-menu"><a class="main-menu-btn" style="font-size: 13px;vertical-align: middle" href="#">HUMAN<br/>PRACTICES <img src="https://2020.igem.org/wiki/images/f/fa/T--BUCT--arrow-down.png" style="margin-left: 6px" width="20px" height="22px"/></a>
+            <ol class="buct-submenu">
+                <li><a href="https://2020.igem.org/Team:BUCT/Human_Practices">Integrated HP</a></li>
+                <li><a href="https://2020.igem.org/Team:BUCT/Collaboration">Collaboration</a></li>
+                <li><a href="https://2020.igem.org/Team:BUCT/Partnership">Partnership</a></li>
+                <li><a href="https://2020.igem.org/Team:BUCT/Education">Education&<br/>Engagement</a></li>
 
             </ol>
         </li>
         <li class="main-menu"><a class="main-menu-btn" href="#">Judging Form</a> </li>
 
     </ul>
-    </div>
+
 </nav>
+
+
+
+
 <div style="width: 100%;height: 90px"></div>
 <!--navigator end -->
 <!--team-name begin-->
 <!-- background-stars -->
 
 <div class="bg-star-container"><canvas id="bubbles-canvas"></canvas>
-    <svg class="jellyfish"   xmlns="http://www.w3.org/2000/svg" viewBox="0 0 278.8 291.7">
+    <svg class="jellyfish"    viewBox="0 0 278.8 291.7">
     <defs>
         <style>
             .cls-1 {
@@ -195,7 +210,7 @@
     </svg>
     <div class="cell-wrapper">
 
-    <img class="big-virus"  src="static/img/virus.png"  />
+    <img class="big-virus"  src="https://2020.igem.org/wiki/images/2/2e/T--BUCT--virus.png"  />
     <div class="covid-wrapper" style="z-index: -80">
         <div class="viruses">
             <div class="virus"></div>
@@ -254,7 +269,7 @@
     </div>
     </div>
     <div class="g-cell-wrapper">
-        <img class="big-virus2"  src="static/img/virus2.png"  />
+        <img class="big-virus2"  src="https://2020.igem.org/wiki/images/4/43/T--BUCT--virus2.png"  />
     <div class="g-covid-wrapper" style="z-index: -80">
         <div class="g-viruses">
             <div class="g-virus"></div>
@@ -362,7 +377,7 @@
     <div class="wave-bottom"></div>
     <!--主页内容-->
     <div class="wiki-slide" style="margin-top: 120px">
-        <img src="static/img/cell1.png" alt="left-cell" class="slide-img" style="width: 400px" />
+        <img src="https://2020.igem.org/wiki/images/d/dc/T--BUCT--cell1.png" alt="left-cell" class="slide-img" style="width: 400px" />
         <div class="slide-text">
             <p class="slide-title text-left" >Phase separation system</p>
             <p class="slide-content-text text-left" >We constructed the first artificial phase separation system ever in prokaryotes. These droplets in E.coli exhibit similar spherical shape and high fluidity as they were in eukaryotes. By creating membraneless organelles in a cell, phases could realize the redistribution of various targets, including proteins and small organic molecules.</p>
@@ -370,7 +385,7 @@
         </div>
     </div>
     <div class="wiki-slide" style="direction: rtl">
-        <img src="static/img/cell2.png" alt="right-cell" class="slide-img"  />
+        <img src="https://2020.igem.org/wiki/images/6/62/T--BUCT--cell2.png" alt="right-cell" class="slide-img"  />
         <div class="slide-text">
             <p class="slide-title text-left" style="background-image: linear-gradient(to right, #fbc7d4, #9796f0);">Photo-activated switch</p>
             <p class="slide-content-text text-left" style="border-color: #ab72e8" >We use laser as a switch to control our system in a high spatial-temporal resolution. Within a few seconds, target proteins would redistribute into existing phases. After incubated in dark for several minutes, targets can reverse to previous smear state.</p>
@@ -378,7 +393,7 @@
         </div>
     </div>
     <div class="wiki-slide"style="margin-top:-80px" >
-            <img src="static/img/cell3.png" alt="right-cell" class="slide-img"  style="width: 400px"  />
+            <img src="https://2020.igem.org/wiki/images/a/a3/T--BUCT--cell3.png" alt="right-cell" class="slide-img"  style="width: 400px"  />
             <div class="slide-text">
                 <p class="slide-title text-left" style="background-image: linear-gradient(to right, #ffafbd,#ffc3a0);">Modelling our system</p>
                 <p class="slide-content-text text-left" style="border-color: #e0ad7b" >
@@ -389,7 +404,7 @@
             </div>
         </div>
     <div class="wiki-slide" style="direction: rtl">
-        <img src="static/img/cell4.png" alt="right-cell" class="slide-img"  style="width: 400px" />
+        <img src="https://2020.igem.org/wiki/images/7/78/T--BUCT--cell4.png" alt="right-cell" class="slide-img"  style="width: 400px" />
         <div class="slide-text">
             <p class="slide-title text-left" style="background-image: linear-gradient(to right, #ffe259,#ffa751);">Downstream reactions</p>
             <p class="slide-content-text text-left" style="border-color:#ffa751" >Enzymes of proper size could be recruited into phases by using photo-activated switch. Selecting substrates of proper solubility according to our model, we realized the regulation of enzymatic reactions.
@@ -397,7 +412,7 @@
         </div>
     </div>
     <div class="wiki-slide" style="margin-top:-80px" >
-        <img src="static/img/cell5.png" alt="right-cell" class="slide-img"  style="width: 400px"  />
+        <img src="https://2020.igem.org/wiki/images/d/d1/T--BUCT--cell5.png" alt="right-cell" class="slide-img"  style="width: 400px"  />
         <div class="slide-text">
             <p class="slide-title text-left" style="background-image: linear-gradient(to right, #f8ffae,#43c6ac);">Improvement</p>
             <p class="slide-content-text text-left" style="border-color: #8dbd5c" >
@@ -407,14 +422,14 @@
         </div>
     </div>
     <div class="wiki-slide" style="direction: rtl">
-        <img src="static/img/cell6.png" alt="right-cell" class="slide-img" style="width: 400px"  />
+        <img src="https://2020.igem.org/wiki/images/c/c3/T--BUCT--cell6.png" alt="right-cell" class="slide-img" style="width: 400px"  />
         <div class="slide-text">
             <p class="slide-title text-left" style="background-image: linear-gradient(to right, #a8ff78,#78ffd6);">More possibilities</p>
             <p class="slide-content-text text-left" style="border-color:#90e263" >Upon introducing this powerful tool in E.coli, there are much more prosperous applications waiting to be developed. We propose that by isolating specific material in phase, a uniform E.coli colony could grow into a society with cell differentiation.</p>
         </div>
     </div>
     <div class="wiki-slide" style="margin-top:-80px">
-        <img src="static/img/cell7.png" alt="right-cell" class="slide-img"  style="width: 400px"   />
+        <img src="https://2020.igem.org/wiki/images/8/8d/T--BUCT--cell7.png" alt="right-cell" class="slide-img"  style="width: 400px"   />
         <div class="slide-text">
             <p class="slide-title text-left" style="background-image: linear-gradient(to right,#74ebd5,#acb6e5);">Hardware</p>
             <p class="slide-content-text text-left" style="border-color: #acb6e5" >
@@ -423,7 +438,7 @@
 
         </div>
     </div>
-    <button id="topButton" class="button button-glow button-circle button-action button-jumbo" onclick="scrollControl(0)"><i class="fa fa-angle-up"></i></button>
+    <button id="topButton" class="buct-button button-glow button-circle button-action button-jumbo" style="align-items: center" onclick="scrollControl(0)"><img src="https://2020.igem.org/wiki/images/3/3d/T--BUCT--arrow-up.png" style="margin-top: 15px" width="30px" /></button>
     <!--主页内容结束-->
 
     <!--脚注-->
@@ -431,26 +446,26 @@
     <div class="container">
         <div class="box">
             <a class="img" href="#">
-                <img src="static/img/igem2.png" alt="igem_logo" />
+                <img src="https://2020.igem.org/wiki/images/b/bc/T--BUCT--igem2.png" alt="igem_logo" />
 
             </a>
             <p>IGEM</p>
         </div>
         <div class="box">
             <a class="img" href="#">
-                <img src="static/img/logo1.png" alt="team_logo" />
+                <img src="https://2020.igem.org/wiki/images/2/24/T--BUCT--logo1.png" alt="team_logo" />
 
             </a>
             <p>TEAM</p>
         </div><div class="box">
         <a class="img" href="#">
-            <img src="static/img/buct-logo2.png" alt="buct_logo" />
+            <img src="https://2020.igem.org/wiki/images/d/d7/T--BUCT--buct-logo2.png" alt="buct_logo" />
 
         </a>
         <p>BUCT</p>
     </div><div class="box" style="margin-left: -30px">
         <a class="img" href="#">
-            <img src="static/img/zhihu.png" alt="zhihu_logo" />
+            <img src="https://2020.igem.org/wiki/images/2/23/T--BUCT--zhihu.png" alt="zhihu_logo" />
 
         </a>
         <p>ZhiHu</p>
